--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1>임지민's hompage</h1>
+
+<html>
+  <head
+   <meta charset="uft-8">
+  <meta name "viewpoint"content="width=device-width, initial-sclae=1">
+  </head>
+  <body>
+    <h1>임지민's hompage</h1>
 <a href="pi.html">Pi</a><br>
 <a href="numgues3.html">Num Guess</a><br>
