--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
 <a href="pi.html">Pi</a><br>
 <a href="numgues3.html">Num Guess</a><br>
 <a href="baekjoon.html">Baekjoon</a><br>
-<a href="homepage.html">Website</a><br>
+<a href="homepage1.html">Website</a><br>
