--- a/homepage1.html
+++ b/homepage1.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>BONVOYAGE_travel</title>
-    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="homepage1.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script> 
 </head>
