--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>jimin's hompage</h1>
-<a href="pi.html">Pi</a><br>
-<a href="numgues3.html">Num Guess</a><br>
-<a href="baekjoon.html">Baekjoon</a><br>
-<a href="FINAL.html">Website</a><br>
+<a href="pi calculation.html">Pi</a><br>
+<a href="numgues.html">Num Guess</a><br>
+<a href="python_baekjoon.html">Baekjoon</a><br>
+
